--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
