--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile('org.springframework.session:spring-session-jdbc')
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.springframework.security:spring-security-test")
 }
