--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,22 @@ cache: //(2)
     - '$HOME/.m2/gradle'
 script: "./gradle clean build"
 
+before_deploy:
+  - zip -r freelec-springboo2-webservice * //(2)
+  - mkdir -p deploy //(3)
+  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip //(4)
+
+deploy:
+          - provider : s3
+          access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+          secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+          bucket: freelec-springboot-build # S3 버킷
+          region: ap-northeast-2
+          skip_cleanup: true
+          acl: privae # zip 파일 접근을 private으로
+          local_dir: deploy # before_deploy에서 생성한 디렉토리 //(6)
+          wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
